--- a/index.html
+++ b/index.html
@@ -1,9 +1,15 @@
  <!DOCTYPE html>
 <html>
+<meta content="SEX" property="og:title" />
+<meta content="SEX" property="og:description" />
+<meta content="https://szymin22.ovh" property="og:url" />
+<meta content="szymin22.ovh/img/sex.png" property="og:image" />
+<meta content="#43B581" data-react-helmet="true" name="theme-color" />
 <head>
 <title>Sex</title>
 </head>
 <body>
 <img src="/img/sex.png" alt="sex">
+
 </body>
 </html> 
