--- a/index.html
+++ b/index.html
@@ -1,10 +1,9 @@
  <!DOCTYPE html>
 <html>
-<meta content="SEX" property="og:title" />
-<meta content="SEX" property="og:description" />
-<meta content="https://szymin22.ovh" property="og:url" />
-<meta content="szymin22.ovh/img/sex.png" property="og:image" />
-<meta content="#43B581" data-react-helmet="true" name="theme-color" />
+<meta content="Sex" property="og:title">
+<meta content="Sex" property="og:description">
+<meta content="Sex" property="og:site_name">
+<meta content='https://szymin22.ovh/img/sex.png' property='og:image'>
 <head>
 <title>Sex</title>
 </head>
