--- a/index.html
+++ b/index.html
@@ -1,9 +1,13 @@
  <!DOCTYPE html>
 <html>
-<meta content="Sex" property="og:title">
-<meta content="Sex" property="og:description">
-<meta content="Sex" property="og:site_name">
-<meta content='https://szymin22.ovh/img/sex.png' property='og:image'>
+
+<meta property="og:title" content="Sex">
+<meta property="og:description" content="Sex">
+<meta property="og:type" content="article">
+<meta property="og:url" content="https://szymin22.ovh">
+<meta property="og:image" content="https://www.szymin22.ovh/img/sex.png">
+<meta property="og:image:type" content="image/png">
+<meta name="theme-color" content="#FD0054">
 <head>
 <title>Sex</title>
 </head>
