--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <meta property="og:description" content="Sex">
 <meta property="og:type" content="article">
 <meta property="og:url" content="https://szymin22.ovh">
-<meta property="og:image" content="https://www.szymin22.ovh/img/sex.png">
+<meta property="og:image" content="https://cdn.discordapp.com/attachments/840285361615011893/1344376026104594442/sex.png?ex=67c0af3d&is=67bf5dbd&hm=6cc85ac93ee89dd50d3f581c940f3eeff7a97c6295fb20dddc75580bfba0f30b&">
 <meta property="og:image:type" content="image/png">
 <meta name="theme-color" content="#FD0054">
 <head>
