--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
- <!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 
 <meta property="og:title" content="sex">
@@ -13,7 +13,11 @@
 <title>Sex</title>
 </head>
 <body>
-<img src="/img/sex.png" alt="sex">
-
+    <div style="display: flex; align-items: center; gap: 20px;">
+        <img src="/img/sex.png" alt="sex">
+        <video width="800" controls>
+            <source src="vid/SEX2.mp4" type="video/mp4">
+        </video>
+    </div>
 </body>
-</html> 
+</html>
