--- a/radio.html
+++ b/radio.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <meta http-equiv='refresh' content='0; URL=http://example.com/'>
+  <meta http-equiv='refresh' content='0; URL=https:szymin22.ovh:8000/stream'>
 </head>
 
 
