--- a/radio.html
+++ b/radio.html
@@ -1,15 +1,8 @@
-<!DOCTYPE HTML>
-<html lang="en-US">
+<!DOCTYPE html>
+  <html>
     <head>
-        <meta charset="UTF-8">
-        <meta http-equiv="refresh" content="0; url=https://szymin22.ovh:8000/stream">
-        <script type="text/javascript">
-            window.location.href = "https://szymin22.ovh:8000/stream"
-        </script>
-        <title>Page Redirection</title>
-    </head>
-    <body>
-        <!-- Note: don't tell people to `click` the link, just tell them that it is a link. -->
-        If you are not redirected automatically, follow this <a href='http://example.com'>link to example</a>.
-    </body>
-</html>
+  		<title>sex</title>
+  			<meta charset="UTF-8" />
+  			<meta http-equiv="refresh" content="1; URL=szymin22.ovh:8000/stream" />
+  	</head>
+  </html>
